--- a/docs/paper/RS/UAV/2.md
+++ b/docs/paper/RS/UAV/2.md
@@ -9,7 +9,7 @@ title: A combined image matching method for Chinese optical satellite imagery
 - 设计一个新的相似性测度（DANCC），能考虑几何与纹理相似性
 - 引入分层匹配策略，逐层提高匹配精度
 
-### 1 Introduction
+## 1 Introduction
 
 目前的卫星影像匹配算法存在以下几个问题
 
@@ -17,7 +17,7 @@ title: A combined image matching method for Chinese optical satellite imagery
 - 不同平台和视角获取的卫星影像存在较大的局部几何畸变，使相关性下降，匹配算法失效
 - 对困难的匹配情况，很难找到可靠的同名点，一些算法就无法使用了。
 
-### 2 Related work
+## 2 Related work
 
 - 多视的最小二乘匹配
 - NCC中严格几何辐射假定
@@ -34,7 +34,7 @@ title: A combined image matching method for Chinese optical satellite imagery
   - 近似核线
 - 基于线的匹配方法
 
-### 3 Algorithmic outline
+## 3 Algorithmic outline
 
 - 改进的Wallis滤波器
 
@@ -105,9 +105,9 @@ title: A combined image matching method for Chinese optical satellite imagery
      逐层重提取兴趣点，并更新近似核线，用二次多项式拟合细化匹配结果。顶层影像匹配完成后，用光束法区域网平差补偿EOPs，所有匹配点的残差都可以计算得到。用3倍中误差筛选下一层的匹配点，建立三角网，并用处理后的EOPs计算更精确的近似核线。在三角与核线约束下重新提取兴趣点。逐层重复过程，直至匹配点被细化，残差小于6倍中误差后作为最终匹配结果。
 
 
-### 4 Experiments and analysis
+## 4 Experiments and analysis
 
-### 5 Conclusions
+## 5 Conclusions
 
 - 本文中改进的Wallis型滤波器能避免过增强问题，参数可以自适应地确定。从而提高图像增强效果，提高匹配成功率
 
