--- a/docs/misc/cvpr/云台旋转角换算.md
+++ b/docs/misc/cvpr/云台旋转角换算.md
@@ -34,28 +34,28 @@ $$\begin{aligned}R_{zyx}=\begin{bmatrix}\cos Y\cos P &-\sin Y\cos R+\cos Y\sin P
 
 如果已知 $R_{-yxz}$ ，就可通过若干矩阵元素计算出中国摄影测量常使用的旋转角（以下简称 nPOK）。
 
-也就是如果能计算得到摄影测量像空间坐标 $(x,y,z)^\mathrm{T}$ 与像空间辅助坐标系 $(X,Y,Z)^\mathrm{T}$（根据我的直觉应是东北天坐标）的换算关系，就能计算出 nPOK。
+也就是如果能计算得到摄影测量像空间坐标 $(x_p,y_p,z_p)^\mathrm{T}$ 与像空间辅助坐标系 $(X_P,Y_P,Z_P)^\mathrm{T}$（根据我的直觉应是东北天坐标）的换算关系，就能计算出 nPOK。
 
 为使用已有的云台旋转角，需要将像空间下的初始状态坐标转为云台下的初始状态坐标：
 
-$$\begin{aligned}\begin{bmatrix}x_{g} \\y_{g}\\z_{g} \end{bmatrix}&= R_{z=\pi/2}R_{x=-\pi/2}\begin{bmatrix}x \\y\\z \end{bmatrix}= \begin{bmatrix}0&-1&0 \\1&0&0\\0&0&1 \end{bmatrix}\begin{bmatrix}1&0&0 \\0&0&1\\0&-1&0 \end{bmatrix}\begin{bmatrix}x \\y\\z \end{bmatrix}\\&= \begin{bmatrix}0&0&-1 \\1&0&0\\0&-1&0 \end{bmatrix}\begin{bmatrix}x \\y\\z \end{bmatrix} \\&= R_g\begin{bmatrix}x \\y\\z \end{bmatrix}\end{aligned}$$
+$$\begin{aligned}\begin{bmatrix}x_{g} \\y_{g}\\z_{g} \end{bmatrix}&= R_{z=\pi/2}R_{x=-\pi/2}\begin{bmatrix}x \\y\\z \end{bmatrix}= \begin{bmatrix}0&-1&0 \\1&0&0\\0&0&1 \end{bmatrix}\begin{bmatrix}1&0&0 \\0&0&1\\0&-1&0 \end{bmatrix}\begin{bmatrix}x_p \\y_p\\z_p \end{bmatrix}\\&= \begin{bmatrix}0&0&-1 \\1&0&0\\0&-1&0 \end{bmatrix}\begin{bmatrix}x_p \\y_p\\z_p \end{bmatrix} \\&= R_p^g\begin{bmatrix}x_p \\y_p\\z_p \end{bmatrix}\end{aligned}$$
 
-$R_g$ 就是转换矩阵。
+$R_p^g$ 就是转换矩阵。
 
 再由 $R_{zyx}$，得计算机视觉下定义的世界坐标：
 
-$$\begin{aligned}\begin{bmatrix}X_{g} \\Y_{g}\\Z_{g} \end{bmatrix}= R_{zyx}\begin{bmatrix}x_g \\y_g\\z_g \end{bmatrix}\end{aligned}$$
+$$\begin{aligned}\begin{bmatrix}X_{G} \\Y_{G}\\Z_{G} \end{bmatrix}= R_{zyx}\begin{bmatrix}x_g \\y_g\\z_g \end{bmatrix}\end{aligned}$$
 
 再将世界坐标转为摄影测量坐标：
 
-$$\begin{aligned}\begin{bmatrix}X \\Y\\Z \end{bmatrix}= R_P\begin{bmatrix}X_{g} \\Y_{g}\\Z_{g} \end{bmatrix}\end{aligned}$$
+$$\begin{aligned}\begin{bmatrix}X_P \\Y_P\\Z_P \end{bmatrix}= R_G^P\begin{bmatrix}X_{G} \\Y_{G}\\Z_{G} \end{bmatrix}\end{aligned}$$
 
 也即：
 
-$$\begin{aligned}\begin{bmatrix}X \\Y\\Z \end{bmatrix}= R_PR_{zyx}R_g\begin{bmatrix}x \\y\\z \end{bmatrix}\end{aligned}$$
+$$\begin{aligned}\begin{bmatrix}X_P \\Y_P\\Z_P \end{bmatrix}= R_G^PR_{zyx}R_p^g\begin{bmatrix}x_p \\y_p\\z_p \end{bmatrix}\end{aligned}$$
 
 则 $R_{y^-xz}$ 即为我们需要的摄影测量中的旋转矩阵：
 
-$$\begin{aligned}R_{y^-xz}=R_PR_{zyx}R_g=\begin{bmatrix}\cos Y\cos R + \sin Y\sin P\sin R&\cos Y\sin R - \sin Y\sin P\cos R&-\sin Y\cos P\\ - \sin Y\cos R + \cos Y\sin P\sin R & - \sin Y\sin R - \cos Y\sin P\cos R &-\cos Y\cos P\\-\cos P\sin R& \cos P\cos R&-\sin P\end{bmatrix}\end{aligned}$$
+$$\begin{aligned}R_{y^-xz}= R_G^PR_{zyx}R_p^g=\begin{bmatrix}\cos Y\cos R + \sin Y\sin P\sin R&\cos Y\sin R - \sin Y\sin P\cos R&-\sin Y\cos P\\ - \sin Y\cos R + \cos Y\sin P\sin R & - \sin Y\sin R - \cos Y\sin P\cos R &-\cos Y\cos P\\-\cos P\sin R& \cos P\cos R&-\sin P\end{bmatrix}\end{aligned}$$
 
 显然 $R_{y^-xz}$ 是一个正交矩阵，因而它是一个旋转矩阵。它完全从摄影测量像平面坐标系出发，变换得到了摄影测量像空间辅助坐标系，故可由 $R_{y^-xz}$ 计算 nPOK
