--- a/docs/misc/cvpr/云台旋转角换算.md
+++ b/docs/misc/cvpr/云台旋转角换算.md
@@ -50,6 +50,10 @@ $$\begin{aligned}\begin{bmatrix}X_{G} \\Y_{G}\\Z_{G} \end{bmatrix}= R_{zyx}\begi
 
 $$\begin{aligned}\begin{bmatrix}X_P \\Y_P\\Z_P \end{bmatrix}= R_G^P\begin{bmatrix}X_{G} \\Y_{G}\\Z_{G} \end{bmatrix}\end{aligned}$$
 
+其中
+
+$$\begin{aligned}R_G^P=\begin{bmatrix}0 &1 &0\\1&0&0\\0&0&-1 \end{bmatrix}\end{aligned}$$
+
 也即：
 
 $$\begin{aligned}\begin{bmatrix}X_P \\Y_P\\Z_P \end{bmatrix}= R_G^PR_{zyx}R_p^g\begin{bmatrix}x_p \\y_p\\z_p \end{bmatrix}\end{aligned}$$
