--- a/docs/misc/cvpr/云台旋转角换算.md
+++ b/docs/misc/cvpr/云台旋转角换算.md
@@ -10,13 +10,13 @@ $$\begin{aligned}R_{y^-xz}=\begin{bmatrix}\cos\varphi^-\cos\kappa-\sin\varphi^-\
 
 由于通常意义上的旋转角，都是符合右手定则的。但是，摄影测量中 y 轴旋转使用的是左手定则，其原因我认为是为了保持三个旋转矩阵形式上的“一致”（但是这样反而不符合轮换对称性）。
 
-将 $\varphi^-$ 改为 $-\varphi$，可转化为计算机视觉角度下的旋转矩阵：
+将 $\varphi^-$ 改为 $-\varphi$，可转化为计算机视觉角度下 y-x-z 顺规的旋转矩阵：
 
 $$\begin{aligned}R_{yxz}&=R_\varphi R_\omega R_\kappa \\&=\begin{bmatrix}\cos\varphi & 0&\sin\varphi\\0&1&0\\-\sin\varphi &0&\cos \varphi\end{bmatrix}\begin{bmatrix}1&0&0\\0&\cos\omega &-\sin\omega\\0&\sin\omega &\cos \omega\end{bmatrix}\begin{bmatrix}\cos\kappa&-\sin\kappa&0\\\sin\kappa&\cos \kappa&0\\0&0&1\end{bmatrix}\end{aligned}$$
 
 $$\begin{aligned}R_{yxz}=\begin{bmatrix}\cos\varphi\cos\kappa+\sin\varphi\sin\omega\sin\kappa &-\cos\varphi\sin\kappa+\sin\varphi\sin\omega\cos\kappa &\sin\varphi\cos\omega \\\cos\omega\sin\kappa &\cos\omega\cos\kappa &-\sin\omega \\-\sin\varphi\cos\kappa+\cos\varphi\sin\omega\sin\kappa &\sin\varphi\sin\kappa+\cos\varphi\sin\omega\cos\kappa &\cos\varphi\cos\omega\end{bmatrix}\end{aligned}$$
 
-以 yaw、pitch 和 roll 旋转角表示，对应 z-y-x 旋转顺序，可得到计算机视觉常用的旋转矩阵：
+以 yaw、pitch 和 roll 旋转角表示，对应 z-y-x 顺规，可得到计算机视觉常用的旋转矩阵：
 
 $$\begin{aligned}R_{zyx}&=R_ Y R_ P R_ R \\&=\begin{bmatrix}\cos Y&-\sin Y&0\\\sin Y&\cos Y&0\\0&0&1\end{bmatrix}\begin{bmatrix}\cos P & 0&\sin P\\0&1&0\\-\sin P &0&\cos  P\end{bmatrix}\begin{bmatrix}1&0&0\\0&\cos R &-\sin R\\0&\sin R &\cos  R\end{bmatrix}\end{aligned}$$
 
@@ -32,7 +32,7 @@ $$\begin{aligned}R_{zyx}=\begin{bmatrix}\cos Y\cos P &-\sin Y\cos R+\cos Y\sin P
 
 ### 三、旋转角转换
 
-如果已知 $R_{-yxz}$ ，就可通过若干矩阵元素计算出中国摄影测量常使用的旋转角（以下简称 nPOK）。
+如果已知 $R_{y^-xz}$ ，就可通过若干矩阵元素计算出中国摄影测量常使用的旋转角（以下简称 nPOK）。
 
 也就是如果能计算得到摄影测量像空间坐标 $(x_p,y_p,z_p)^\mathrm{T}$ 与像空间辅助坐标系 $(X_P,Y_P,Z_P)^\mathrm{T}$（根据我的直觉应是东北天坐标）的换算关系，就能计算出 nPOK。
 
