--- a/docs/course/geomatics/大地测量学.md
+++ b/docs/course/geomatics/大地测量学.md
@@ -1174,7 +1174,9 @@
 
 - 大地线的性质
 
-	- 大地线是两点间唯一最短线，而且位于相对法截线之间，并靠近正法截线，它与正法截线间的夹角
+	- 大地线是两点间唯一最短线，而且位于相对法截线之间，并靠近正法截线，它与正法截线间的夹角为
+
+		- $\delta=\cfrac{1}{3}\Delta$
 
 	- 在椭球面上进行测量计算时，应当以两点间的大地线为依据。在地面上测得的方向、距离等，应当归算成相应大地线的方向、距离。
 
