--- a/docs/misc/cvpr/云台旋转角换算.md
+++ b/docs/misc/cvpr/云台旋转角换算.md
@@ -28,7 +28,7 @@ $$\begin{aligned}R_{zyx}=\begin{bmatrix}\cos Y\cos P &-\sin Y\cos R+\cos Y\sin P
 
 云台旋转角是独立于无人机进行计算的，不需要考虑无人机的姿态。
 
-云台坐标系的旋转初始状态（三个旋转角均为 0 ）是向北的（朝向北东天坐标系的 x 轴），而中国使用的摄影测量坐标系的旋转初始状态是向下的（东北天坐标 z 轴负方向）。
+云台坐标系的旋转初始状态（三个旋转角均为 0 ）是向北的（朝向北东地坐标系的 x 轴），而中国使用的摄影测量坐标系的旋转初始状态是向下的（东北天坐标 z 轴负方向）。
 
 ### 三、旋转角转换
 
