--- a/docs/course/Photogrammetry/解析摄影测量.md
+++ b/docs/course/Photogrammetry/解析摄影测量.md
@@ -256,7 +256,7 @@
 ### 第四章 立体观察与像点坐标量测
 - 人造立体视觉
     - 人眼的感知过程
-        - 来自物体的光刺激视网膜的杆状和锥状细胞（物理过程）使其感光（生理过程)，通过视神经纤维传至大脑视觉中心，经记忆加入已有的概念与经验（心理过程)，从而形成感知
+        - 来自物体的光刺激视网膜的杆状和锥状细胞（物理过程）使其感光（生理过程），通过视神经纤维传至大脑视觉中心，经记忆加入已有的概念与经验（心理过程），从而形成感知
     - 人造立体视觉的效果
         - 正立体
         - 反立体
