update sfm and switch to mathjax

--- a/docs/course/Photogrammetry/解析摄影测量.md
+++ b/docs/course/Photogrammetry/解析摄影测量.md
@@ -178,7 +178,7 @@
     - 像空间与像空间辅助坐标系的坐标变换
         - 以 $Y$ 轴为主轴的 $\phi-\omega-\kappa$ 转角系统
             - $\begin{bmatrix} X\\ Y\\Z\end{bmatrix}=R_\varphi R_\omega R_\kappa \begin{bmatrix} x\\ y\\ z \end{bmatrix}=R\begin{bmatrix} x\\ y\\ z \end{bmatrix}$
-            - $R=R_\varphi R_\omega R_\kappa =\begin{bmatrix}\cos\varphi & 0&-\sin\varphi\\0&1&0\\\sin\varphi &0&\cos \varphi\end{bmatrix}\begin{bmatrix}1&0&0\\0&\cos\omega &-\sin\omega\\0&\sin\omega &\cos \omega\end{bmatrix}\begin{bmatrix}\cos\kappa&-\sin\kappa&0\\\sin\kappa&\cos \kappa&0\\0&0&1\end{bmatrix}$
+            - $$R=R_\varphi R_\omega R_\kappa =\begin{bmatrix}\cos\varphi & 0&-\sin\varphi\\0&1&0\\\sin\varphi &0&\cos \varphi\end{bmatrix}\begin{bmatrix}1&0&0\\0&\cos\omega &-\sin\omega\\0&\sin\omega &\cos \omega\end{bmatrix}\begin{bmatrix}\cos\kappa&-\sin\kappa&0\\\sin\kappa&\cos \kappa&0\\0&0&1\end{bmatrix}$$
         - 以 $X$ 轴为主轴的 $\omega \prime-\phi \prime-\kappa\prime$ 转角系统
             - $\begin{bmatrix} X\\ Y\\Z\end{bmatrix}=R_\omega \prime R_\varphi \prime R_\kappa  \prime\begin{bmatrix} x\\ y\\ z \end{bmatrix}=R\begin{bmatrix} x\\ y\\ z \end{bmatrix}$
         - 以 $Z$ 轴为主轴的 $A -\alpha-\kappa _v$ 转角系统
@@ -187,10 +187,11 @@
         - 矩阵只有三个独立参数
         - 逆矩阵为其转置矩阵
         - 矩阵中的每一个元素等于其代数余子式
-- 共线条件方程                    -
+- 共线条件方程
     - 表示摄影中心 $S$ 、像点 $a$ 及其对应物点A三者位于一条直线的数学方程
         - $\begin{bmatrix} X\\ Y\\Z\end{bmatrix}=\dfrac{1}{\lambda}\begin{bmatrix} X_A-X_S\\ Y_A-Y_S\\Z_A-Z_S\end{bmatrix}   \begin{bmatrix} X\\ Y\\Z\end{bmatrix}=R\begin{bmatrix}x\\y\\-f\end{bmatrix}=\begin{bmatrix}a_1&a_2&a_3\\b_1&b_2&b_3\\c_1&c_2&c_3\end{bmatrix}\begin{bmatrix}x\\y\\-f\end{bmatrix}$
-        - $x=-f\dfrac{a_1(X_A-X_S)+b_1(Y_A-Y_S)+c_1(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}\\y=-f\dfrac{a_2(X_A-X_S)+b_2(Y_A-Y_S)+c_2(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}$
+        - $x=-f\dfrac{a_1(X_A-X_S)+b_1(Y_A-Y_S)+c_1(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}$
+          $y=-f\dfrac{a_2(X_A-X_S)+b_2(Y_A-Y_S)+c_2(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}$
     - 倾斜像片与水平像片的坐标关系
         - 倾斜像片
             - $\begin{bmatrix} X_A-X_S\\ Y_A-Y_S\\Z_A-Z_S\end{bmatrix}=\lambda R\begin{bmatrix}x\\y\\-f\end{bmatrix}=\lambda \begin{bmatrix}a_1&a_2&a_3\\b_1&b_2&b_3\\c_1&c_2&c_3\end{bmatrix}\begin{bmatrix}x\\y\\-f\end{bmatrix}$
@@ -208,10 +209,10 @@
         - 利用 DEM 制作数字正射影像
         - 利用 DEM 进行单张像片测图
     - 共线方程线性化
-        - $\nu_x = \dfrac {\partial x}{\partial \varphi }\varDelta \varphi+\dfrac {\partial x}{\partial \omega }\varDelta \omega  +\dfrac {\partial x}{\partial \kappa}\varDelta \kappa+\dfrac {\partial x}{\partial X_S}\varDelta X_S+\dfrac {\partial x}{\partial Y_S}\varDelta Y_S+\dfrac {\partial x}{\partial Z_S}\varDelta Z_S+\dfrac {\partial x}{\partial X}\varDelta X+\dfrac {\partial x}{\partial Y}\varDelta Y +\dfrac {\partial x}{\partial Z}\varDelta Z+\dfrac {\partial x}{\partial x_0}\varDelta x_0+\dfrac {\partial x}{\partial y_0}\varDelta y_0+\dfrac {\partial x}{\partial f}\varDelta f+x^0-x\\\nu_y = \dfrac {\partial y}{\partial \varphi }\varDelta \varphi+\dfrac {\partial y}{\partial \omega }\varDelta \omega +\dfrac {\partial y}{\partial \kappa}\varDelta \kappa+\dfrac {\partial y}{\partial X_S}\varDelta X_S+\dfrac {\partial y}{\partial Y_S}\varDelta Y_S+\dfrac {\partial y}{\partial Z_S}\varDelta Z_S+\dfrac {\partial y}{\partial X}\varDelta X+\dfrac {\partial y}{\partial Y}\varDelta Y+\dfrac {\partial y}{\partial Z}\varDelta Z+\dfrac {\partial y}{\partial x_0}\varDelta x_0 +\dfrac {\partial y}{\partial y_0}\varDelta y_0 +\dfrac {\partial y}{\partial f}\varDelta f+y^0-y$
+        - $$\nu_x = \dfrac {\partial x}{\partial \varphi }\varDelta \varphi+\dfrac {\partial x}{\partial \omega }\varDelta \omega  +\dfrac {\partial x}{\partial \kappa}\varDelta \kappa+\dfrac {\partial x}{\partial X_S}\varDelta X_S+\dfrac {\partial x}{\partial Y_S}\varDelta Y_S+\dfrac {\partial x}{\partial Z_S}\varDelta Z_S+\dfrac {\partial x}{\partial X}\varDelta X+\dfrac {\partial x}{\partial Y}\varDelta Y +\dfrac {\partial x}{\partial Z}\varDelta Z+\dfrac {\partial x}{\partial x_0}\varDelta x_0+\dfrac {\partial x}{\partial y_0}\varDelta y_0+\dfrac {\partial x}{\partial f}\varDelta f+x^0-x\\\nu_y = \dfrac {\partial y}{\partial \varphi }\varDelta \varphi+\dfrac {\partial y}{\partial \omega }\varDelta \omega +\dfrac {\partial y}{\partial \kappa}\varDelta \kappa+\dfrac {\partial y}{\partial X_S}\varDelta X_S+\dfrac {\partial y}{\partial Y_S}\varDelta Y_S+\dfrac {\partial y}{\partial Z_S}\varDelta Z_S+\dfrac {\partial y}{\partial X}\varDelta X+\dfrac {\partial y}{\partial Y}\varDelta Y+\dfrac {\partial y}{\partial Z}\varDelta Z+\dfrac {\partial y}{\partial x_0}\varDelta x_0 +\dfrac {\partial y}{\partial y_0}\varDelta y_0 +\dfrac {\partial y}{\partial f}\varDelta f+y^0-y$$
 - 单片空间后方交会
     - 根据影像覆盖范围内一定数量的分布合理的地面控制点（已知其像点和地面点的坐标)，利用共线条件方程求解影像外方位元素
-    - $x-x_0=-f\dfrac{a_1(X_A-X_S)+b_1(Y_A-Y_S)+c_1(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}=-f\dfrac{\overline{X}}{\overline{Z}}\\y-y_0=-f\dfrac{a_2(X_A-X_S)+b_2(Y_A-Y_S)+c_2(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}=-f\dfrac{\overline{Y}}{\overline{Z}}$
+    - $$x-x_0=-f\dfrac{a_1(X_A-X_S)+b_1(Y_A-Y_S)+c_1(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}=-f\dfrac{\overline{X}}{\overline{Z}}\\y-y_0=-f\dfrac{a_2(X_A-X_S)+b_2(Y_A-Y_S)+c_2(Z_A-Z_S)}{a_3(X_A-X_S)+b_3(Y_A-Y_S)+c_3(Z_A-Z_S)}=-f\dfrac{\overline{Y}}{\overline{Z}}$$
     - 角元素 $\varphi$ $\kappa$ 求导
     - 计算步骤
         - 获取已知数据 $m$，$x_0$，$y_0$，$f$ ， $X_{tp}$， $Y_{tp}$， $Z_{tp}$
@@ -345,9 +346,9 @@
                 - 计算点投影系数 $N_1,N_2$
                 - 计算地面坐标 $(X_A,Y_A,Z_A)$
         - 共线方程严密解法
-            - $v_x=\dfrac{\partial x}{\partial X}\Delta X+\dfrac{\partial x}{\partial Y}\Delta Y+\dfrac{\partial x}{\partial Z}\Delta Z-(x-x^0)\\v_y=\dfrac{\partial y}{\partial X}\Delta X+\dfrac{\partial y}{\partial Y}\Delta Y+\dfrac{\partial y}{\partial Z}\Delta Z-(y-y^0)$
-            - 竖直摄影情况下，可取\varphi=\omega=0,则
-                - $a_{11}=\dfrac{f}{H}\cos\kappa\\a_{12}=\dfrac{f}{H}\sin\kappa\\a_{13}=\dfrac{x}{H}\\a_{21}=-\dfrac{f}{H}\sin\kappa\\a_{22}=+\dfrac{f}{H}\cos\kappa\\a_{23}=+\dfrac{y}{H}$
+            - $$v_x=\dfrac{\partial x}{\partial X}\Delta X+\dfrac{\partial x}{\partial Y}\Delta Y+\dfrac{\partial x}{\partial Z}\Delta Z-(x-x^0)\\v_y=\dfrac{\partial y}{\partial X}\Delta X+\dfrac{\partial y}{\partial Y}\Delta Y+\dfrac{\partial y}{\partial Z}\Delta Z-(y-y^0)$$
+            - 竖直摄影情况下，可取 $\varphi=\omega=0$ ,则
+                - $$a_{11}=\dfrac{f}{H}\cos\kappa\\a_{12}=\dfrac{f}{H}\sin\kappa\\a_{13}=\dfrac{x}{H}\\a_{21}=-\dfrac{f}{H}\sin\kappa\\a_{22}=+\dfrac{f}{H}\cos\kappa\\a_{23}=+\dfrac{y}{H}$$
             - 步骤
                 - 获取已知数据 $x_0,y_0,f,X_{S1},Y_{S1},Z_{S1},\varphi_1,\omega_1,\kappa_1,X_{S2},Y_{S2},Z_{S2},\varphi_2,\omega_2,\kappa_2$
                 - 量测像点坐标 $(x_1,y_1),(x_2,y_2)$
@@ -406,17 +407,17 @@
     - 定义：将相对定向建立的立体模型进行缩放、旋转和平移，使其达到绝对位置的过程
     - 绝对定向元素
         - 描述立体模型在摄影瞬间的绝对位置和姿态的参数
-        - 包括 $\lambda,X_0,Y_0,Z_0,\Phi,\Omega,\Kappa$
+        - 包括 $\lambda,X_0,Y_0,Z_0,\Phi,\Omega,K$
     - 三维空间相似变换方程
     - 三维空间相似变换原理
         - 相关推导
             - 量测2个平高控制点和1个高程以上的控制点可以按最小二乘平差原理求解绝对定向元素
         - 立体模型绝对定向步骤
             - 获取控制点的两套坐标 $(X_p,Y_p,Z_p),(X_{tp},Y_{tp},Z_{tp})$
-            - 给定相似变换参数的初值 $\lambda=1,\Phi=\Omega=\Kappa=0,X_0,Y_0,Z_0$
+            - 给定相似变换参数的初值 $\lambda=1,\Phi=\Omega=K=0,X_0,Y_0,Z_0$
             - 计算重心化坐标
             - 计算误差方程式的系数和常数项
-            - 解法方程得相似变换参数改正数 $\Delta\lambda,\Delta\Phi,\Delta\Omega,\Delta\Kappa,\Delta X_0,\Delta Y_0,\Delta Z_0$
+            - 解法方程得相似变换参数改正数 $\Delta\lambda,\Delta\Phi,\Delta\Omega,\Delta K,\Delta X_0,\Delta Y_0,\Delta Z_0$
             - 计算相似变换参数的新值
             - 判断迭代是否收敛（限差 $0.1^′=3\times10^{-5}$ ）
             - 利用求得的相似变换参数计算所有地面点的三维空间坐标
@@ -792,7 +793,7 @@
 - ▶▶▶▶▶▶人造立体视觉：人眼观察立体像对获得立体视觉的效应。人造立体视觉需要满足4个条件：在不同摄站获取具有一定重叠度的两张影像；一只眼睛只能看一张像片；两张像片上同名点的连线大致与眼基线平行；两张像片的摄影比例尺相差不大，一般不超过15%
 - ▶▶▶主合点：地面上一组平行于摄影方向线的光束在像片上的构像。（或过摄影中心的真水平面与主纵线的交点。）
 - ▶▶改化法方程：采用矩阵运算消去法方程中的一类或几类未知数，而只保留某一类未知数的法方程。
-- ▶▶▶▶绝对定向：将相对定向构建的立体模型经平移、缩放、旋转后纳入到地面坐标系中的过程。绝对定向解算7个参数：$\lambda,X_0,Y_0,Z_0,\Phi,\Omega,\Kappa$
+- ▶▶▶▶绝对定向：将相对定向构建的立体模型经平移、缩放、旋转后纳入到地面坐标系中的过程。绝对定向解算7个参数：$\lambda,X_0,Y_0,Z_0,\Phi,\Omega,K$
 - 空间前方交会：已知立体像对中两张像片的内、外方位元素和像点坐标，确定相应地面点在物方空间坐标系中坐标的方法。
 - ▶▶POS辅助空中三角测量：将POS(GPS/IMU)数据视为带权观测值引摄影测量区域网平差，整体解算地面目标点坐标和像片方位元素，并对其质量进行评定的理论、技术和方法。
 - ▶▶改化法方程：消除一类未知数后所得的法方程
@@ -1039,10 +1040,10 @@
         - 判断迭代是否收敛（限差 $0.1'=3\times10^{-5}$ ）
 - 三维空间相似变换
     - 获取控制点的两套坐标 $(X_p,Y_p,Z_p),(X_{tp},Y_{tp},Z_{tp})$
-    - 给定相似变换参数的初值 $\lambda=1,\Phi=\Omega=\Kappa=0,X_0,Y_0,Z_0$
+    - 给定相似变换参数的初值 $\lambda=1,\Phi=\Omega=K=0,X_0,Y_0,Z_0$
     - 计算重心化坐标
     - 计算误差方程式的系数和常数项
-    - 解法方程得相似变换参数改正数 $\Delta\lambda,\Delta\Phi,\Delta\Omega,\Delta\Kappa,\Delta X_0,\Delta Y_0,\Delta Z_0$
+    - 解法方程得相似变换参数改正数 $\Delta\lambda,\Delta\Phi,\Delta\Omega,\Delta K,\Delta X_0,\Delta Y_0,\Delta Z_0$
     - 计算相似变换参数的新值
     - 判断迭代是否收敛（限差 $0.1^′=3\times10^{-5}$ ）
     - 利用求得的相似变换参数计算所有地面点的三维空间坐标
