--- a/docs/misc/photogrammetry/云台旋转角换算.md
+++ b/docs/misc/photogrammetry/云台旋转角换算.md
@@ -1,6 +1,6 @@
 # 云台旋转角与中国摄影测量旋转角换算
 
-### 一、不同定义下的旋转
+## 一、不同定义下的旋转
 
 中国使用的摄影测量公式，以 y 轴为主轴的公式如下：
 
@@ -24,13 +24,13 @@ $$\begin{aligned}R_{zyx}=\begin{bmatrix}\cos Y\cos P &-\sin Y\cos R+\cos Y\sin P
 
 云台旋转角的旋转矩阵就如上式 $R_{zyx}$ 所示。
 
-### 二、摄影测量坐标系与云台坐标系的不同
+## 二、摄影测量坐标系与云台坐标系的不同
 
 云台旋转角是独立于无人机进行计算的，不需要考虑无人机的姿态。
 
 云台坐标系的旋转初始状态（三个旋转角均为 0 ）是向北的（朝向北东地坐标系的 x 轴），而中国使用的摄影测量坐标系的旋转初始状态是向下的（东北天坐标 z 轴负方向）。
 
-### 三、旋转角转换
+## 三、旋转角转换
 
 如果已知 $R_{y^-xz}$ ，就可通过若干矩阵元素计算出中国摄影测量常使用的旋转角（以下简称 nPOK）。
 
