--- a/docs/paper/RS/UAV/中国光学卫星影像匹配融合方法.md
+++ b/docs/paper/RS/UAV/中国光学卫星影像匹配融合方法.md
@@ -2,6 +2,8 @@
 title: A combined image matching method for Chinese optical satellite imagery
 ---
 
+# A combined image matching method for Chinese optical satellite imagery
+
 针对中国光学卫星影像，本文提出一种影像匹配融合方法：
 
 - 改进的Wallis型滤波器，自适应地确定参数，同时避免“过增强”现象
