--- a/docs/programming/rust/准备工作.md
+++ b/docs/programming/rust/准备工作.md
@@ -2,11 +2,13 @@
 
 ---
 
-### 推荐博客
+# 准备工作
+
+## 推荐博客
 
 [Rust日志记录 - Rust入门秘籍 (junmajinlong.com)](https://rust-book.junmajinlong.com/ch102/tracing.html)
 
-### 如何使用 vscode 配置 rust 环境
+## 如何使用 vscode 配置 rust 环境
 
 手摸手教你之Windows配置Rust开发环境 - 知乎 (zhihu.com)
     
